<resources>
    <string name="app_name">SeeIsrael</string>

    <string name="placeholder_no_locations">Sorry, no locations are currently available</string>

    <string name="no_towns_available">Sorry, no towns are currently available</string>

    <string name="no_wifi">Sorry, there are no available wifi connections./nPlease try again later</string>

    <string name="location_image_content_description">This is an image of the chosen location</string>

    <string name="thumbnail_content_description">This is a thumbnail image of this location</string>

    <string name="favorite_button_content_description">Favorite button, press to add and remove location from favorites</string>

    <string name="unselected_favorite_menu_button_content_description">Favorite button showing as unselected, click once to add this place to favorites list</string>

    <string name="splash_image_content_description">This is a welcome image the app and to Israel</string>

    <string name="dummy_string">Despite fears that Moscow may seek to influence the 2020 elections by launching cyber attacks, social media disinformation, covert agent operations and other “active measures” as it did in the 2016 election, adequate funding and White House focus to counter any new Russian meddling are lagging, experts and officials say.</string>

    <string name="see_more">See More</string>

    <string name="see_less">See Less</string>

    <!-- String names of location catgeory tabs -->

    <string name="discover">Discover</string>

    <string name="eat">Eat</string>

    <string name="hiking">Hiking</string>

    <string name="shopping">Shop</string>

    <string name="sports">Sports</string>

    <string name="playing">Play</string>

    <string name="relaxing">Relax</string>

    <string name="sightseeing">Sight Seeing</string>

    <string name="travelling">Travel</string>

    <!-- String names to pass to category specific api calls -->
    <string name="discovering_api_call_string">discovering</string>

    <string name="eating_api_call_string">eating</string>

    <string name="hiking_api_call_string">hiking</string>

    <string name="shopping_api_call_string">shopping</string>

    <string name="playing_api_call_string">playing</string>

    <string name="sightseeing_api_call_string">sightseeing</string>

    <string name="night_life_api_call_string">going_out</string>

    <string name="sports_api_call_string">doing_sports</string>

    <string name="traveling_api_call_string">traveling</string>

    <string name="relaxing_api_call_string">relaxing</string>

    <string name="favorites_icon">Favorites</string>

    <!-- String for managing a shared element transition animation between different screens-->
    <string name="transition_image">transition_image</string>

    <string name="wikipedia_link">See wikipedia entry for this location</string>


    <string name="title_activity_maps">Map</string>

    <string name="content_cant_be_displayed">Sorry, the content you requested cnt be displayed right now, /nplease try again later. </string>

    <string name="favorite_places">Favorite Places</string>

    <!-- Strings for Map Activity-->
    <string name="location_marker">marker for selected location</string>
    <string name="no_maps_toast">Sorry, there was a problem displaying the map</string>

    <string name="adMob_app_id"></string>

    <string name="activity_exchange_rates_title">Popular Exchange Rates</string>

    <string name="exchange_rates">Exchange Rates</string>

    <string name="hamburger_menu">Menu</string>

    <!-- Strings for SharedPreferences to store currency rate-->
    <string name="shared_preferences_file_key">com.example.android.seeisrael.currency-preferences</string>

    <string name="us_dollar_rate_key">US Dollar Rate</string>

    <string name="gbp_rate_key">Pounds Rate</string>

    <string name="ruble_rate_key">Ruble Rate</string>

    <string name="euro_rate_key">Euro Rate</string>

    <string name="canadian_dollar_rate_key">CA Dollar Rate</string>

    <string name="rand_rate_key">Rand Rate</string>

    <string name="currency_api_has_been_called_key">currency boolean</string>

    <string name="exchange_rate_api_error_message">Sorry, there was a problem getting the exchange rate data</string>

    <string name="default_value_string">Default Value</string>

    <string name="date_of_exchange_rates">These rates are accurate to: </string>

    <string name="unique_work_request_id">get currency data work request</string>

    <!-- Strings for app widget-->

    <string name="add_widget">Add widget</string>

    <string name="USD">USD</string>
    <string name="GBP">GBP</string>
    <string name="ZAR">ZAR</string>
    <string name="EUR">EUR</string>
    <string name="CAD">CAD</string>
    <string name="RUB">RUB</string>
</resources>
