<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="package com.example.android.seeisrael.fragments.LocationDetailsFragment">

    <item
        android:id="@+id/favorites"
        app:showAsAction="always"
        android:title="@string/favorites_icon"
        app:iconTint="@android:color/white"
        android:icon="@drawable/ic_favorite_border"
        android:contentDescription="@string/unselected_favorite_menu_button_content_description"/>


    <item
        android:id="@+id/action_go_to_favorites"
        android:title="@string/favorite_places"
        app:showAsAction="withText"
        app:itemTextColor="@color/colorPrimaryText"/>

    <item
        android:id="@+id/action_go_to_exchange_rates"
        android:title="@string/exchange_rates"
        app:showAsAction="withText"
        app:itemTextColor="@color/colorPrimaryText"
        app:iconTint="@android:color/white"/>
</menu>